src/snapshots/proj__geo_types__test__convert_geometry_collection.snap
---
source: src/geo_types.rs
assertion_line: 327
expression: output

---
GeometryCollection(
    [
        Triangle(
            Triangle(
                Coordinate {
                    x: 0.23556229698665834,
                    y: 48.00830018706168,
                },
                Coordinate {
                    x: 2.3016357481228447,
                    y: 48.871518021466834,
                },
                Coordinate {
                    x: 3.543777524968399,
                    y: 47.81269343169002,
                },
            ),
        ),
        LineString(
            LineString(
                [
                    Coordinate {
                        x: 1.9461678869815624,
                        y: 45.34098542962509,
                    },
                    Coordinate {
                        x: 3.3178711489185697,
                        y: 46.11575845137438,
                    },
                    Coordinate {
                        x: 4.361572299428162,
                        y: 45.56529578393842,
                    },
                ],
            ),
        ),
        Rect(
            Rect {
                min: Coordinate {
                    x: -9.859999997843591,
                    y: 41.14999998828262,
                },
                max: Coordinate {
                    x: 10.379999964442588,
                    y: 51.55999998529196,
                },
            },
        ),
        Polygon(
            Polygon {
                exterior: LineString(
                    [
                        Coordinate {
                            x: -0.2966308165091663,
                            y: 49.1798238791979,
                        },
                        Coordinate {
                            x: 7.186088542417848,
                            y: 48.610157172487696,
                        },
                        Coordinate {
                            x: 7.558593793164613,
                            y: 43.82561056077398,
                        },
                        Coordinate {
                            x: -1.3264704302504164,
                            y: 43.42898790522051,
                        },
                        Coordinate {
                            x: -0.2966308165091663,
                            y: 49.1798238791979,
                        },
                    ],
                ),
                interiors: [
                    LineString(
                        [
                            Coordinate {
                                x: 1.9461678869815624,
                                y: 45.34098542962509,
                            },
                            Coordinate {
                                x: 3.3178711489185697,
                                y: 46.11575845137438,
                            },
                            Coordinate {
                                x: 4.361572299428162,
                                y: 45.56529578393842,
                            },
                            Coordinate {
                                x: 1.9461678869815624,
                                y: 45.34098542962509,
                            },
                        ],
                    ),
                ],
            },
        ),
        MultiPolygon(
            MultiPolygon(
                [
                    Polygon {
                        exterior: LineString(
                            [
                                Coordinate {
                                    x: -0.2966308165091663,
                                    y: 49.1798238791979,
                                },
                                Coordinate {
                                    x: 7.186088542417848,
                                    y: 48.610157172487696,
                                },
                                Coordinate {
                                    x: 7.558593793164613,
                                    y: 43.82561056077398,
                                },
                                Coordinate {
                                    x: -1.3264704302504164,
                                    y: 43.42898790522051,
                                },
                                Coordinate {
                                    x: -0.2966308165091663,
                                    y: 49.1798238791979,
                                },
                            ],
                        ),
                        interiors: [
                            LineString(
                                [
                                    Coordinate {
                                        x: 1.9461678869815624,
                                        y: 45.34098542962509,
                                    },
                                    Coordinate {
                                        x: 3.3178711489185697,
                                        y: 46.11575845137438,
                                    },
                                    Coordinate {
                                        x: 4.361572299428162,
                                        y: 45.56529578393842,
                                    },
                                    Coordinate {
                                        x: 1.9461678869815624,
                                        y: 45.34098542962509,
                                    },
                                ],
                            ),
                        ],
                    },
                    Polygon {
                        exterior: LineString(
                            [
                                Coordinate {
                                    x: -9.859999997843591,
                                    y: 41.14999998828262,
                                },
                                Coordinate {
                                    x: -12.372413507046177,
                                    y: 50.83083621340264,
                                },
                                Coordinate {
                                    x: 10.379999964442588,
                                    y: 51.55999998529196,
                                },
                                Coordinate {
                                    x: 9.155586246082937,
                                    y: 41.76063524340224,
                                },
                                Coordinate {
                                    x: -9.859999997843591,
                                    y: 41.14999998828262,
                                },
                            ],
                        ),
                        interiors: [],
                    },
                    Polygon {
                        exterior: LineString(
                            [
                                Coordinate {
                                    x: 0.23556229698665834,
                                    y: 48.00830018706168,
                                },
                                Coordinate {
                                    x: 2.3016357481228447,
                                    y: 48.871518021466834,
                                },
                                Coordinate {
                                    x: 3.543777524968399,
                                    y: 47.81269343169002,
                                },
                                Coordinate {
                                    x: 0.23556229698665834,
                                    y: 48.00830018706168,
                                },
                            ],
                        ),
                        interiors: [],
                    },
                ],
            ),
        ),
    ],
)
