src/snapshots/proj__geo_types__test__convert_polygon.snap
---
source: src/geo_types.rs
assertion_line: 295
expression: output

---
Polygon {
    exterior: LineString(
        [
            Coordinate {
                x: -0.2966308165091663,
                y: 49.1798238791979,
            },
            Coordinate {
                x: 7.186088542417848,
                y: 48.610157172487696,
            },
            Coordinate {
                x: 7.558593793164613,
                y: 43.82561056077398,
            },
            Coordinate {
                x: -1.3264704302504164,
                y: 43.42898790522051,
            },
            Coordinate {
                x: -0.2966308165091663,
                y: 49.1798238791979,
            },
        ],
    ),
    interiors: [
        LineString(
            [
                Coordinate {
                    x: 1.9461678869815624,
                    y: 45.34098542962509,
                },
                Coordinate {
                    x: 3.3178711489185697,
                    y: 46.11575845137438,
                },
                Coordinate {
                    x: 4.361572299428162,
                    y: 45.56529578393842,
                },
                Coordinate {
                    x: 1.9461678869815624,
                    y: 45.34098542962509,
                },
            ],
        ),
    ],
}
